# atcoder-offline-python

./: .gitignore  README.md  pyproject.toml  settings.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
atcoder_offline/: __init__.py  __main__.py  __version__.py  api.py  atcoder.py  drive.py  notion.py  opt.py  screenshot.py
config/: env.json.example
docs/: conf.py  index.rst  modules.rst  test_sample.rst
tests/: test_api.py  test_atcoder.py  test_drive.py  test_notion.py  test_sample.py  test_screenshot.py
