[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "atcoder_offline"
description = "My package description"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
exclude = ["build", "tests", "notebooks", "config"]

[tool.setuptools.dynamic]
version = {attr = "atcoder_offline.version"}

[tool.setuptools_scm]
write_to = "atcoder_offline/__version__.py"

[tools.black]
line-length = 100

[tool.isort]
profile = "black"

[tools.flake8]
max-line-length = 100